# jacky_rag_project

./: .env_copy  .gitignore  README.md  init_project.sh  main.py  pyproject.toml  start.sh  start_server.sh
assets/: index-DJxVGi4K.css
config/: model_config.py
models/: model_factory.py  model_factory_ebd.py  model_paths.py
other_md/: # RAG + MCP 知识库开发计划.md  前端页面开发计划.md  大体流程.md
src/: rag_pipeline.py
src/api/: auth.py  chat.py  chromadb_lib.py  documents.py  usage_limits.py
src/loaders/: base_loader.py  pdf_loader.py
src/processors/: semantic_chunker.py
src/services/: chat_session_store.py  chroma_cleanup.py  retrieval_service.py  scheduler_service.py  semantic_cache.py  usage_limiter.py  vector_store_cache.py
src/tools/: embedding_text_splitter.py
src/vectorstore/: chroma_store.py
tests/: check_chroma_01.py  check_chroma_data.py  test_pdf_loader.py  test_rag_pipeline.py  test_vectorstore.py
